[metadata]
name = dfmodules
version = 0.1
url = https://github.com/DUNE-DAQ/dfmodules
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = dfmodules
package_dir = =python
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

